feat: api get group details - done
